# feuerwehr_anmelder

./: README.md  anmeldung.xlsx  build.sh  main.py  main2.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: main.yml  windows.yml
backend/: logic.py
frontend/: app.py
