[project]
name = "feuerwehr-anmelder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pandastable>=0.14.0",
    "pillow>=12.0.0",
    "selenium>=4.38.0",
    "ttkbootstrap>=1.19.0",
]
